# privacy-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
.cursor/rules/: python.md  test_python.md
app/: __init__.py  main.py  run.sh
benchmark/: README.md  benchmark_open_pii.py  benchmark_results.json  config.benchmark.yaml  explore_benchmark_results.ipynb  process_detections_csv.py  run_all.sh
notebook/: config.example.yaml  edsnlp_test.ipynb  french_quickstart.ipynb  open_pii_masking_500k_evaluation.ipynb  open_pii_masking_500k_exploration.ipynb
scripts/: explore_benchmark_results.ipynb  preload_models.py
src/privacy_service/: __init__.py
src/privacy_service/core/: config.py  models.py  service.py
src/privacy_service/recognizers/: ai4privacy_recognizer.py  edsnlp_recognizer.py  entity_mapping.py
tests/: config.test.yaml  conftest.py  test_ai4privacy_recognizer.py  test_app.py  test_config.py  test_edsnlp_recognizer.py  test_models.py  test_service.py
